--- a/src/Components/AboutUs/css/AboutShop.module.css
+++ b/src/Components/AboutUs/css/AboutShop.module.css
@@ -1,51 +1,102 @@
-div.shop_top_wrap{
+article.shop_info{
     width: 100%;
-    /* height: 500px; */
-    /* background: red; */
+    height: auto;
+    min-height: 800px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2,1fr);
+    grid-gap: 1em;
+    margin-top: 40px;
+}
+article.shop_info div{
+    width: 100%;
+    height: auto;
 }
 p.shop_info_img1{
     width: 32%;
-    /* height: 100%; */
-    /* background: url(/public/images/AboutUs/shop_info0.png) no-repeat center center; */
-    background-size: cover;
     float: left;
     margin-right: 20px;
 }
 p.shop_info_img2{
     width:  32%;
-    /* height: 100%; */
-    /* background: url(/public/images/AboutUs/shop_info1.png) no-repeat center center; */
-    background-size: cover;
     float: left;
     margin-right: 20px;
-}
-p.shop_info_img3{
-    width:  50%;
-    /* height: 100%; */
-    /* background: url(/public/images/AboutUs/shop_info1.png) no-repeat center center; */
-    background-size: cover;
-    float: right;
-    margin-left: 20px;
 }
 div.shop_top_wrap p img{
     width: 100%;
 }
 p.shop_info_title{
-    font: bold 2.25em 'Noto Sans KR';
+    font: bold 2em 'Noto Sans KR';
     margin-bottom: 0.5em;
-    padding-top:1.5em;
-    /* background: red; */
+    padding-top:1em;
 }
-
-p.shop_into_text{
+p.shop_info_text{
     font: normal 1.13em/150% 'Noto Sans KR';
     color: #626262;
     text-align: justify;
     text-indent: 4px;
-
+}
+div.shop_under_wrap>p.shop_info_img3{
+    width:  60%;
+    float: right;
+}
+div.shop_under_wrap p img{
+    width: 100%;
+}
+div.shop_under_wrap p{
+    width: 35%;
 }
 .icon{
     position: relative;
     top: 4px;
     left: 8px;
+}
+/*  */
+p.shop_text{
+    font: normal 20px 'Noto Sans KR';
+    margin-top: 10px;
+    margin-left: 16px; 
+    color: #626262;
+    float: left;
+}
+div.search_wrap{
+    width: 350px;
+    height: 40px;
+    float: right;
+    position: relative;
+    left: 0px;
+    top: 0px;
+}
+div.search_wrap input{
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    padding-left: 45px;
+    border-radius: 20px;
+    border: solid 1px #E9E9E9;
+}
+div.search_wrap i{
+    position: absolute;
+    left: 0px;
+    top: 0;
+    width: 40px;
+    height: 45px;
+    font-size: 20px;
+    color: #636363;
+    line-height: 40px;
+    text-align: center;
+}
+div.shop_map{
+    width: 90%;
+    margin: 100px auto;
+    height: 450px;
+    background: url(/public/images/contents/map.png) no-repeat center center;
+}
+@media screen and (max-width:1200px) {
+    article.shop_info div{
+        font-size: 14px;
+    }
+    p.shop_info_title{
+        padding-top: 0.5em;
+    }
 }
