--- a/src/Pages/css/Header.module.css
+++ b/src/Pages/css/Header.module.css
@@ -49,7 +49,7 @@ ul.mainmenu_list>li{
     top: 0px;
 }
 ul.mainmenu_list>li>a{
-
+    width: 100%;
     font: bold 14px 'Noto Sans KR';
     color: white;
 }
