--- a/src/Pages/Mobile/css/MHeader.module.css
+++ b/src/Pages/Mobile/css/MHeader.module.css
@@ -1,15 +1,15 @@
-.header{
+header.header{
     width: 100%;
-    height: 50px;
+    height: 60px;
     box-sizing: border-box;
     padding: 10px 16px;
     background: #331D12;
-    border: solid 3px yellow;
 }
 h1.logo{
     width: 115px;
     height: 40px;
     float: left;
+    padding-top: 10px;
 }
 h1.logo img{
     width: 100%;
@@ -19,12 +19,14 @@ header button{
     height: 40px;
     color: white;
     border: 0px;
-    background: red;
-    /* float: right; */
-    margin-left: 8px;
+    background: none;
+    position: absolute;
+    right: 16px;
+    top: 15px;
 }
 .alarm_btn{
     font-size: 20px;
+    right: 48px;
 }
 .menu_btn{
     font-size: 24px;
