--- a/src/Components/Home/css/Best.module.css
+++ b/src/Components/Home/css/Best.module.css
@@ -119,25 +119,11 @@ p.best_item_image{
     overflow: hidden;
 }
 p.best_item_image img{
-    /* width: 100%; */
     height: 100%;
+    position: relative;
+    left: -20%;
+
 }
-/* div.best2{
-    background: url(/public/images/contents/best1.png) no-repeat center center;
-    background-size: cover;
-}
-div.best3{
-    background: url(/public/images/contents/best2.png) no-repeat center center;
-    background-size: cover;
-}
-div.best4{
-    background: url(/public/images/contents/best3.png) no-repeat center center;
-    background-size: cover;
-}
-div.best5{
-    background: url(/public/images/contents/best4.png) no-repeat center center;
-    background-size: cover;
-} */
 div.selected{
     background: rgba(0,0,0,0.4);
     color: white;
