--- a/src/Pages/Mobile/Components/css/MBrand.module.css
+++ b/src/Pages/Mobile/Components/css/MBrand.module.css
@@ -5,10 +5,13 @@ section.brand{
     padding: 20px 16px;
 }
 p.brand_img{
-    width: 100%;
-    /* height: 150px; */
+    width: 90%;
     text-align: center;
+    margin: 0px auto;
     margin-bottom: 16px;
+}
+p.brand_img img{
+    width: 100%;
 }
 p.title{
     text-align: center;
