--- a/src/Pages/Mobile/Components/css/MVisual.module.css
+++ b/src/Pages/Mobile/Components/css/MVisual.module.css
@@ -1,4 +1,4 @@
-div.visual_wrap{
+/* div.visual_wrap{
     width: 100%;
     height: 200px;
     position: relative;
@@ -18,19 +18,24 @@ ul.visual_list li{
     position: absolute;
     left: 0px;
     top: 0px;
+    display: none;
 }
 ul.visual_list li:nth-child(1){
     background: url(/public/images/Mobile/visual_img.png) no-repeat center center;
     background-size: cover;
-}
+    display: block;
+} */
 p.visual_title{
     width: 100%;
+    height: 200px;
     text-align: center;
     color: white;
-    font: normal 12px 'Noto Sans KR';
-    padding-top: 120px;
+    font: normal 18px 'Noto Sans KR';
+    padding-top: 110px;
+    background-size: cover;
+    box-sizing: border-box;
 }
-div.dot_wrap{
+/* div.dot_wrap{
     width: 60px;
     height: 10px;
     position: absolute;
@@ -51,4 +56,4 @@ ul.dot_list li{
 }
 ul.dot_list li.selected{
     background: #FCADA7;
-}
+} */
