--- a/src/Pages/css/Header.module.css
+++ b/src/Pages/css/Header.module.css
@@ -1,8 +1,8 @@
 /* 헤더영역 */
 div.header_wrap{
     width: 100%;
-    height: 80px;
-    /* height: 230px; */
+    /* height: 80px; */
+    height: 230px;
     background: linear-gradient(to bottom, rgba(51,29,18,1) 0%,rgba(51,29,18,1) 80px,rgba(0,0,0,0.7) 80px,rgba(0,0,0,0.7) 100%); 
     overflow: hidden;
     position: absolute;
@@ -14,7 +14,7 @@ header.header{
     width: 1200px;
     height: 100%;
     margin: 0px auto;
-    padding: 25px 15px;
+    padding: 21px 15px;
     box-sizing: border-box;
     min-width: 768px;
 }
@@ -50,21 +50,21 @@ ul.mainmenu_list>li{
 }
 ul.mainmenu_list>li>a{
     width: 100%;
-    font: bold 14px 'Noto Sans KR';
+    font: bold 16px 'Noto Sans KR';
     color: white;
 }
-ul.mainmenu_list>li.selected ul.submenu_list{
+ul.mainmenu_list>li:hover ul.submenu_list{
     background: rgba(133,89,86,0.4);
 }
 ul.mainmenu_list>li::before{
     content: "";
-    width: 120%;
+    width: 100%;
     height: 2px;
     background: #969696;
     position: absolute;
     left: 50%;
-    margin-left: -60%;
-    bottom: 16px;
+    margin-left: -50%;
+    top:40px;
     display: block;
     scale: 0;
     transition: 0.3s ease-out;
@@ -73,14 +73,21 @@ ul.mainmenu_list>li:hover::before{
     scale: 1;
 }
 ul.submenu_list{
-    margin-top: 27px;
+    width: 100px;
+    margin-top: 30px;
     box-sizing: border-box;
     padding-top: 20px;
-    height: 149px;
+    height: 150px;
+    position: absolute;
+    top:30px;
+    left: 50%;
+    margin-left: -50px;
 }
 ul.submenu_list>li{
     margin-bottom: 16px;
     text-align: center;
+    /* margin: 0px 10px 16px 10px; */
+
 }
 ul.submenu_list>li>a{
     font: normal 14px 'Noto Sans KR';
@@ -101,7 +108,7 @@ ul.usermenu_list{
     flex-wrap: wrap;
     flex-direction: row;
     justify-content: space-between;
-    align-content: center;
+    padding-top: 8px;
 }
 ul.usermenu_list li a{
     font-size: 20px;
