--- a/src/Components/AboutUs/css/AboutShop.module.css
+++ b/src/Components/AboutUs/css/AboutShop.module.css
@@ -2,28 +2,35 @@ article.shop_info{
     width: 100%;
     height: auto;
     min-height: 800px;
-    display: grid;
+    /* display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(2,1fr);
     grid-gap: 1em;
-    margin-top: 40px;
+    margin-top: 40px; */
 }
 article.shop_info div{
     width: 100%;
     height: auto;
 }
+div.shop_top_wrap{
+    width: 100%;
+    height: 300px !important;
+}
 p.shop_info_img1{
     width: 32%;
+    height: 100%;
     float: left;
     margin-right: 20px;
 }
 p.shop_info_img2{
     width:  32%;
+    height: 100%;
     float: left;
     margin-right: 20px;
 }
 div.shop_top_wrap p img{
     width: 100%;
+    /* height: 100%; */
 }
 p.shop_info_title{
     font: bold 2em 'Noto Sans KR';
@@ -36,9 +43,16 @@ p.shop_info_text{
     text-align: justify;
     text-indent: 4px;
 }
+div.shop_under_wrap{
+    width: 100%;
+    padding-top: 50px;
+}
 div.shop_under_wrap>p.shop_info_img3{
     width:  60%;
     float: right;
+    height: 350px;
+    overflow: hidden;
+    box-sizing: border-box;
 }
 div.shop_under_wrap p img{
     width: 100%;
