--- a/src/Components/Home/css/Best.module.css
+++ b/src/Components/Home/css/Best.module.css
@@ -1,23 +1,39 @@
 div.best_wrap{
     width: 100%;
-    height: 100vh;
+    height: 1080px;
     min-width: 768px;
-    min-height: 860px;
+    margin-bottom: 100px;
+    padding-top: 50px;
+}
+div.best_top_inner{
+    width: 100%;
+    /* width: 1200px; */
+    margin: 0px auto;
+    height: 500px;
+}
+div.best_bottom_inner{
+    width: 1200px;
+    margin: 0px auto;
+    /* height: 50%; */
+    height: 350px;
+    margin-top: 100px;
+    min-width: 768px;
 }
 div.best_item{
-    width: 25%;
-    height: 50%;
+    width: 24%;
+    height: 100%;
     float: left;
     position: relative;
     left: 0px;
     top: 0px;
+    margin-right: 1%;
 }
 div.best1{
     width: 50% !important;
     background: url(/public/images/contents/best0.png) no-repeat center center;
     background-size: cover;
     float: left;
-
+    margin-right: 0%;
 }
 p.best_item_name{
     width: 100%;
@@ -42,7 +58,7 @@ p.best_item_name span{
 }
 section.best{
     width: 50%;
-    height: 50%;
+    height: 100%;
     float: left;
     background-color: #331D12;
     box-sizing: border-box;
@@ -121,7 +137,7 @@ p.best_item_image{
 p.best_item_image img{
     height: 100%;
     position: relative;
-    left: -20%;
+    left: -30%;
 
 }
 div.selected{
@@ -137,8 +153,25 @@ div.selected{
     font-size: 2.88em;
     box-sizing: border-box;
 }
+div.best_box{
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+}
+p.best_box_title{
+    font: bold 2.25em 'Noto Sans KR';
+    margin-bottom: 16px;
+}
+p.best_box_text{
+    font: normal 1.25em 'Noto Sans KR';
+    margin-bottom: 32px;
+}
 
-
+@media screen and (max-width:1200px) {
+    div.best_bottom_inner{
+        width: 100%;
+    }
+}
 @media screen and (max-width:980px) {
     ul.best_list{
         font-size: 14px;
@@ -147,4 +180,5 @@ div.selected{
         padding-left: 10px;
         padding-right: 10px;
     }
+    
 }
