--- a/src/Components/Home/css/News.module.css
+++ b/src/Components/Home/css/News.module.css
@@ -32,6 +32,22 @@ ul.news_list li{
     width: 31%;
     border: solid 2px #c7c7c7;
 }
+/*  */
+div.news_list{
+    width: 100%;
+    margin: 0px auto;
+    height: 400px;
+}
+div.news_list_li{
+    background: white;
+    box-sizing: border-box;
+    padding: 15px;
+    height: 400px;
+    width: 345px;
+    /* width: 30%; */
+    border: solid 2px #c7c7c7;
+    float: left;
+}
 p.news_img{
     width: 100%;
     height: 240px;
@@ -63,7 +79,7 @@ p.news_text{
     margin-right: 8px;
     text-indent: 2px;
 }
-button.news_btn_left{
+/* button.news_btn_left{
     width: 30px;
     height: 30px;
     font-size: 30px;
@@ -82,7 +98,7 @@ button.news_btn_right{
     top: 40%;
     border: none;
     background: none;
-}
+} */
 
 
 
