--- a/src/Components/News/css/NewsList.module.css
+++ b/src/Components/News/css/NewsList.module.css
@@ -21,7 +21,7 @@ ul.news_list li{
 p.date_bar{
     width: 100%;
     height: 50px;
-    background: #C5A47E;
+    background: #e4d3c091;
     padding-left: 50px;
     box-sizing: border-box;
     font: normal 14px/50px 'Noto Sans KR';
