--- a/src/Pages/Mobile/Components/css/MNews.module.css
+++ b/src/Pages/Mobile/Components/css/MNews.module.css
@@ -6,6 +6,7 @@ section.mobile_news{
     position: relative;
     left: 0px;
     top: 0px;
+    padding-bottom: 100px;
 }
 div.news_list_wrap{
     width: 90%;
@@ -20,7 +21,7 @@ ul.news_list li{
     width: 100%;
     height: auto;
     box-sizing: border-box;
-    padding-top: 15px;
+    padding-top: 20px;
     border-bottom: solid 1px #828282;
 }
 p.news_img{
@@ -28,7 +29,6 @@ p.news_img{
     /* height: 150px; */
     /* overflow: hidden; */
     margin-bottom: 8px;
-    
 }
 p.news_img img{
     width: 100%;
@@ -37,20 +37,20 @@ p.news_title{
     font: bold 14px/150% 'Noto Sans KR';
 }
 p.news_text{
-    font: normal 10px/150% "Noto Sans KR";
-    margin-bottom: 20px;
+    font: normal 12px/150% "Noto Sans KR";
+    margin-bottom: 40px;
 }
 button.news_btn{
     width: 80px;
     height: 30px;
     /* margin: 20px auto; */
-    background: #FCADA7;
+    background: #ee665c;
     color: white;
     border: none;
-    font: normal 12px 'Noto Sans KR';
+    font: normal 12px/26px 'Noto Sans KR';
     border-radius: 10px;
     position: absolute;
     left: 50%;
-    bottom: 0px;
+    bottom: 40px;
     margin-left: -40px;
 }
