--- a/src/Pages/Mobile/Components/css/MUnderInfo.module.css
+++ b/src/Pages/Mobile/Components/css/MUnderInfo.module.css
@@ -1,11 +1,11 @@
 div.mobile_underinfo{
     width: 100%;
-    height: 140px;
     margin-top: 50px;
 }
 div.mobile_underinfo form{
     width: 100%;
     height: 60%;
+    height: 120px;
     background: #D9D9D9;
     display: flex;
     flex-direction: column;
@@ -18,29 +18,28 @@ div.mobile_underinfo form{
     top: 0px;
 }
 div.mobile_underinfo form p{
-    font: normal 10px 'Noto Sans KR';
+    font: normal 14px 'Noto Sans KR';
     color: #626262;
-    margin-bottom: 4px;
+    margin-bottom: 8px;
 }
 div.mobile_underinfo form input{
     width: 100%;
-    height: 30px;
     box-sizing: border-box;
     border-radius: 20px;
     border: solid 1px #e9e9e9;
-    font: normal 12px 'Noto Sans KR';
-    padding-left: 26px;
+    font: normal 18px/30px 'Noto Sans KR';
+    padding-left: 35px;
 }
 div.mobile_underinfo form i{
-    font-size: 11px;
-    color: #626262;
+    font-size: 16px;
+    color: #8d8d8d;
     position: relative;
-    left: 10px;
-    top: -15px;
+    left: 14px;
+    top: -24px;
 }
 div.banner_wrap{
     width: 100%;
-    height: 40%;
+    height: 60px;
 }
 div.banner_wrap p{
     width: 50%;
